<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/logo_background"
    tools:context=".Cours"
    >


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/curse_page_title"
        android:fontFamily="@font/kkanit"
        android:textSize="30dp"
        android:textColor="@color/gold_logo"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        />



    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/curse_page_section"
        android:fontFamily="@font/kkanit"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/curse_page_section0"
        android:fontFamily="@font/kkanit"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <ListView
        android:id="@+id/listViewCours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:text="Passer aux exercices"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.977"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.979"
        android:layout_gravity="center"
        />



</LinearLayout>